# GCManager

./: .coveragerc  .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  codecov.yml  makefile  mongo-for-testing.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  publish_image.yml
gcmanager/: app.py  dependencies.py  domain.py  enums.py  exceptions.py  repositories.py  routes.py  serializers.py  settings.py  usecases.py  validators.py  webapi.py
resources/: sample.ini
src/: manage.py
src/collector/: forms.py  urls.py  views.py  widgets.py
src/collector/templates/collector/: gccollector.html
src/core/: models.py  tables.py  urls.py  views.py
src/core/migrations/: 0001_initial.py  0002_giftcardinformation_is_used.py  0003_auto_20210221_2154.py
src/core/templates/core/: allgcs.html  base.html  index.html
src/dispenser/: apps.py  forms.py  urls.py  views.py
src/dispenser/templates/dispenser/: denominationselect.html  giftcarddetail.html
src/giftcardmanager/: context_processors.py  settings.py  urls.py  wsgi.py
tests/: factories.py
tests/integration/: db_app_test_case.py  test_webapi.py  utils.py
tests/unit/: factories.py  test_container.py  test_domain.py  test_usecases.py  test_webapi.py
