[tool.poetry]
name = "gcmanager"
version = "0.1.0"
description = "A Gift Card Management System"
authors = ["Vishal Tanwar <vishal.tanwar@outlook.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.10.4"
kink = "^0.8.1"
falcon = "^4.0.2"
marshmallow = "^3.14.1"
pymongo = "^4.0.1"
gunicorn = "^23.0.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.6"
coverage = "^7.6.12"
mypy = "^1.15.0"
mockito = "^1.3.0"
factory-boy = "^3.2.1"

[tool.ruff]
target-version = "py310"
select = ["E", "F", "C90", "W", "COM818", "I", "UP", "G", "T20", "RET", "SIM", "ERA"]
line-length = 88
extend-exclude = ["venv/"]

[tool.ruff.isort]
force-single-line = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
files = "gcmanager/"
disallow_untyped_defs = true
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
