[project]
name = "gcmanager"
version = "0.1.0"
description = "A Gift Card Management System"
authors = [{ name = "Vishal Tanwar", email = "vishal.tanwar@outlook.com" }]
requires-python = "==3.13.2"
license = "MIT"
dependencies = [
    "kink>=0.8.1,<0.9",
    "falcon>=4.0.2,<5",
    "marshmallow>=3.14.1,<4",
    "pymongo>=4.0.1,<5",
    "gunicorn>=23.0.0,<24",
]

[dependency-groups]
dev = [
    "ruff>=0.9.6,<0.10",
    "coverage>=7.6.12,<8",
    "mypy>=1.15.0,<2",
    "mockito>=1.3.0,<2",
    "factory-boy>=3.2.1,<4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py313"
select = ["E", "F", "C90", "W", "COM818", "I", "UP", "G", "T20", "RET", "SIM", "ERA"]
line-length = 88
extend-exclude = ["venv/"]

[tool.ruff.isort]
force-single-line = true

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
files = "gcmanager/"
disallow_untyped_defs = true
ignore_missing_imports = true
